--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,43 @@
-dist:     trusty
-sudo:     required
-
-language: cpp     
-
-os:
-    - linux
-    - osx
-
-compiler:
-    - gcc
-    - clang
-
-env:
-    - TARGET_CPU=amd64 BUILD_CONFIGURATION=Debug
-    - TARGET_CPU=amd64 BUILD_CONFIGURATION=Release
-    - TARGET_CPU=x86 BUILD_CONFIGURATION=Debug
-    - TARGET_CPU=x86 BUILD_CONFIGURATION=Release
+language: cpp
 
 matrix:
-    exclude:
-        - os:       osx
-          compiler: gcc
+  include:
+    - os: linux
+      dist: xenial
+      addons:
+        apt:
+          sources: ubuntu-toolchain-r-test
+          packages: g++-5
+      env: MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+      before_script:
 
-        - os:  osx
-          env: TARGET_CPU=x86 BUILD_CONFIGURATION=Debug
+    - os: linux
+      dist: bionic
+      addons:
+        apt:
+          sources: ubuntu-toolchain-r-test
+          packages: g++-8
+      env: MATRIX_EVAL="CC=gcc-8 && CXX=g++-8
 
-        - os:  osx
-          env: TARGET_CPU=x86 BUILD_CONFIGURATION=Release
+    - os: linux
+      dist: xenial
+      compiler: clang
+      addons:
+        apt:
+          packages: clang-5.0
+      env: MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+
+    - os: linux
+      dist: xenial
+      compiler: clang
+
+before_install:
+- eval "${MATRIX_EVAL}"
 
 script:
-    - mkdir build
-    - cd build
-    - cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DTARGET_CPU=$TARGET_CPU
-    - cmake --build .
+- mkdir build
+- cd build
+- cmake ..
+- cmake --build . --config RELEASE
+- cd ..
+- source build/application/seidel
