--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
   - cd build
   - cmake .. 
   - cmake --build . --config RELEASE
-  - ./application/seidel
+  - ./application/Release/seidel
   - cd ..
