--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 project (seidel)
 
+set(CMAKE_CXX_STANDARD 17)
+
 set (SOURCE_EXE main.cpp)
 
 add_subdirectory (algo)
